[gd_scene load_steps=5 format=3 uid="uid://6jk4mjlkjis2"]

[ext_resource type="Script" path="res://levels/Level.gd" id="1_kybfy"]
[ext_resource type="PackedScene" uid="uid://bk11xepy8ew52" path="res://scene/core/fade.tscn" id="2_fcgqh"]
[ext_resource type="PackedScene" uid="uid://bnawhs3mkm3fp" path="res://levels/space_bar.tscn" id="3_hy24i"]
[ext_resource type="PackedScene" uid="uid://ckp3hw4btpj7n" path="res://scene/cube.tscn" id="3_y1ore"]

[node name="Level" type="Node2D"]
script = ExtResource("1_kybfy")

[node name="Camera" type="Camera2D" parent="."]
anchor_mode = 0
ignore_rotation = false

[node name="Bg" type="CanvasLayer" parent="."]

[node name="Background" parent="Bg" instance=ExtResource("3_y1ore")]
position = Vector2(300, 300)
scale = Vector2(63, 63)
color = Color(0.912289, 0.912289, 0.912289, 1)

[node name="Scene" type="CanvasLayer" parent="."]
layer = 2
follow_viewport_enabled = true

[node name="WhiteBands" type="CanvasLayer" parent="."]
layer = 19

[node name="Ground" parent="WhiteBands" instance=ExtResource("3_y1ore")]
position = Vector2(300, 550)
scale = Vector2(62, 12)
metadata/_edit_lock_ = true

[node name="SpaceBar" parent="WhiteBands/Ground" instance=ExtResource("3_hy24i")]
visible = false
scale = Vector2(0.0241935, 0.125)

[node name="Ceiling" parent="WhiteBands" instance=ExtResource("3_y1ore")]
position = Vector2(300, 50)
scale = Vector2(62, 12)
metadata/_edit_lock_ = true

[node name="Fade" parent="." instance=ExtResource("2_fcgqh")]
visible = false
follow_viewport_enabled = false

[connection signal="fade_in_ended" from="Fade" to="." method="_on_fade_fade_in_ended"]
[connection signal="fade_out_ended" from="Fade" to="." method="_on_fade_fade_out_ended"]
